state management + custom hooks

--- a/src/assets/styles/UI.scss
+++ b/src/assets/styles/UI.scss
@@ -35,3 +35,9 @@
 .form-control .error {
   color: rgb(210, 54, 54);
 }
+
+.todo-header {
+  font-size: 2.5rem;
+  font-family: cursive;
+  color: coral;
+}
