--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -12,6 +12,14 @@
     justify-content: flex-end;
 }
 
+.justify-space-between {
+    justify-content: space-between;
+}
+
+.justify-space-around {
+    justify-content: space-around;
+}
+
 .form-container {
     margin: 5rem 30rem;
 
