--- a/src/assets/styles/layout.scss
+++ b/src/assets/styles/layout.scss
@@ -21,7 +21,7 @@
 }
 
 .form-container {
-    margin: 5rem 35rem;
+    margin: 10% 35%;
 
     h3 {
         text-align: center;
@@ -35,6 +35,17 @@
 
 @media (max-width: 1400px) {
     .form-container {
-        margin: 5rem 28rem;
+        margin: 10% 30%;
     }
+  }
+
+  @media (max-width: 1200px) {
+    .form-container {
+        margin: 10% 25%;
+    }
+  }
+    @media (max-width: 800px) {
+        .form-container {
+            margin: 10% 15%;
+        }
   }
