--- a/src/assets/styles/UI.scss
+++ b/src/assets/styles/UI.scss
@@ -1,15 +1,15 @@
 .card {
-    padding: 1rem;
-    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
-    border-radius: 14px;
-    background-color: white;
-    margin: 1rem;
-    width: 10em;
-  }
+  padding: 1rem;
+  box-shadow: 0 2px 8px rgba(0, 0, 0, 0.25);
+  border-radius: 14px;
+  background-color: white;
+  margin: 1rem;
+  width: 10em;
+}
 
-  .form-control {
-    margin: 20px 2rem;
-  }
+.form-control {
+  margin: 20px 2rem;
+}
 
 
 .form-control input,
@@ -25,8 +25,7 @@
 
 .form-control input:focus,
 .form-control select:focus,
-.form-control textarea:focus
- {
+.form-control textarea:focus {
   outline: none;
   border-color: #de82828f;
   background-color: #ffbbbb8f;
@@ -39,7 +38,7 @@
 .todo-header {
   font-size: 2.5rem;
   font-family: cursive;
-  color: coral;
+  color: #506effb8;
 }
 
 label {
